<resources>
    <string name="app_name">Report Life</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="regProgressDialog">oi</string>
    <string name="regiTituloProgressDialog">euaqui</string>
    <string name="mainToolbarTitle">Chat</string>
    <string name="log_out">Log Out</string>
    <string name="all_users_title">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="regisToolbarTitle">Create Account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="regis_error_registre">Cannot Sign in .Please check the form and try again!</string>
    <string name="logging_in">Logging In</string>
    <string name="logging_check_msg">Please wait while we check your credentials!</string>
    <string name="login_error">Cannot Login in. Please check the form and try again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_friends_bem_vindo">Page Friends Bem vindo</string>
    <string name="display_name">Display Name</string>
    <string name="default_status">title display name</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="account_status">Account Status</string>
    <string name="save_changes">save changes</string>
    <string name="saving_changes">Saving Changes</string>
    <string name="mensage_save_changes">Please wait while we save the changes</string>
    <string name="selectImage">SELECT IMAGE</string>
    <string name="uploadingImage">Uploading Image...</string>
    <string name="title_progress_upload_image">Please wait while we upload and process the image.</string>

</resources>
