<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.nathan.reportlife.SettingsActivity"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:src="@mipmap/ic_person_round"
        android:id="@+id/settings_display_image" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/settings_display_image"
        android:layout_below="@+id/settings_display_image"
        android:layout_marginTop="24dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/settings_default_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/default_status"
        android:textSize="16sp" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings_status_btn"
        android:layout_alignStart="@+id/settings_status_btn"
        android:layout_marginBottom="13dp"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/settings_display_name"
        android:layout_marginBottom="40dp"
        android:text="@string/change_status" />

</RelativeLayout>
